@@ -13,7 +13,7 @@
                function="DVBAdminGtk" />
       </entries>
 
-      <synchronization required="yes" />
+      <!-- <synchronization required="yes" /> -->
 
       <properties>
         <!-- S, T or FILE -->
